[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/game/world/entity/entities/enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/resources/sprite_frames/char/BruteSpriteFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/brute/state_machine/BruteWalkState.gd" type="Script" id=3]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/brute/state_machine/BruteState.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/brute/state_machine/BruteSlamState.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/brute/Brute.gd" type="Script" id=6]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/brute/BruteSprite.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6 )

[node name="Brute" instance=ExtResource( 1 )]
script = ExtResource( 6 )
collision_mode = 2

[node name="BodyShape" parent="." index="0"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="HealthComponent" parent="." index="1"]
max_health = 24
__immunities = [ "energy" ]

[node name="InHitBox" parent="." index="2"]
position = Vector2( 0, -2 )

[node name="BodyShape" type="CollisionShape2D" parent="InHitBox" index="0"]
shape = SubResource( 1 )

[node name="OutHitBox" parent="." index="3"]
position = Vector2( 0, -2 )

[node name="BodyShape" type="CollisionShape2D" parent="OutHitBox" index="0"]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" parent="." index="4"]
position = Vector2( 0, -2 )
scale = Vector2( 0.5, 0.6 )

[node name="EnemyFSM" parent="." index="5"]
__inital_state = NodePath("BruteWalkState")

[node name="BruteWalkState" parent="EnemyFSM" index="2" instance=ExtResource( 4 )]
script = ExtResource( 3 )

[node name="BruteSlamState" parent="EnemyFSM" index="3" instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="SlamTimer" type="Timer" parent="EnemyFSM/BruteSlamState" index="0"]
wait_time = 0.8
one_shot = true

[node name="SlamDelayTimer" type="Timer" parent="EnemyFSM/BruteSlamState" index="1"]
wait_time = 2.0
one_shot = true

[node name="EnemySprite" parent="." index="6"]
position = Vector2( 1, -12 )
frames = ExtResource( 2 )
animation = "idle_slam"
frame = 2
playing = true
script = ExtResource( 7 )

[connection signal="player_detected" from="." to="EnemyFSM/BruteSlamState" method="_on_Brute_player_detected"]
[connection signal="player_visual_lost" from="." to="EnemyFSM/BruteSlamState" method="_on_Brute_player_visual_lost"]
[connection signal="timeout" from="EnemyFSM/BruteSlamState/SlamTimer" to="EnemyFSM/BruteSlamState" method="_on_SlamTimer_timeout"]
[connection signal="timeout" from="EnemyFSM/BruteSlamState/SlamDelayTimer" to="EnemyFSM/BruteSlamState" method="_on_SlamDelayTimer_timeout"]
